Fixed sidebar menu overflow, added 404, and set theme colour

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -240,7 +240,7 @@ header nav {
   max-width: calc(100% - calc(1rem + 4px));
   white-space: nowrap;
   overflow: hidden;
-  overflow-y: "...";
+  text-overflow: "...";
 }
 
 #sidebar a {
